--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ jobs:
           run: pip install -r requirements.txt
     
         - name: Run tests
-          run: python tests
+          run: python -m unittest discover -v
 
     unit-testing-windows:
         runs-on: windows-latest
@@ -35,4 +35,4 @@ jobs:
           run: pip install -r requirements.txt
     
         - name: Run tests
-          run: python tests
+          run: python -m unittest discover -v
